--- a/Tubes_B.ipynb
+++ b/Tubes_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +186,7 @@
        "0.9402859586706309"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +206,7 @@
        "0.2467498197744391"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +226,7 @@
        "'outlook'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +312,7 @@
        "'No'"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +357,7 @@
        "'No'"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 243,
    "metadata": {
     "scrolled": false
    },
@@ -383,10 +376,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x7ff799343c50>"
+       "<__main__.Node at 0x20f24021780>"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,14 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,9 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 245,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -454,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -471,17 +457,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test=play_tennis[0:3]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_X = test.drop('play',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_tree(node,data,index,result):\n",
+    "    if node.label is not None: \n",
+    "        result.append(node.getLabel())\n",
+    "    else:\n",
+    "        for i in node.children:\n",
+    "            if i==data.loc[index,node.attribute]:\n",
+    "                check_tree(node.children[i],data,index,result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pred(data,model):\n",
+    "    result = []\n",
+    "    for i in range(len(data)):\n",
+    "        check_tree(model,data[i:i+1],i,result)\n",
+    "    return pd.DataFrame(result)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=id3(play_tennis, \"play\")\n",
+    "res = pred(test_X,model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0\n",
+       "0   No\n",
+       "1   No\n",
+       "2  Yes"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(pred,data,target_attribute):\n",
+    "    cnt = 0\n",
+    "    for i in range(len(pred)):\n",
+    "        if pred.loc[i] == data.loc[i]:\n",
+    "            cnt+=1\n",
+    "    return cnt*100/len(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.714285714285715"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(play_tennis['play'],x,'play')"
+   ]
   },
   {
    "cell_type": "code",
@@ -507,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
