collect on main.py

--- a/Tubes_B.ipynb
+++ b/Tubes_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "0.9402859586706309"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "0.2467498197744391"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "'outlook'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 261,
    "metadata": {
     "scrolled": false
    },
@@ -394,10 +394,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x27f9ca48a58>"
+       "<__main__.Node at 0x7f8dbe793400>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.print_tree(node, depth)>"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print_tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 270,
    "metadata": {
     "scrolled": true
    },
@@ -576,7 +587,7 @@
        "2  Overcast  Hot     None    Weak"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 271,
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +661,7 @@
        "2  Yes"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +712,7 @@
        "(0.9182958340544894, 2.45)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +774,7 @@
        "('petal width (cm)', 0.8)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,16 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x27f9ca2b278>"
+       "<__main__.Node at 0x7f8dbe75b860>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 280,
    "metadata": {
     "scrolled": true
    },
@@ -905,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1121,7 @@
        "2  Overcast  Mild     High  Strong  Yes"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,52 +1193,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = c45_prun(play_tennis, \"play\",True)"
+    "model = c45_prun(iris, \"target\",True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['outlook', 'temp', 'humidity', 'wind', 'play'], dtype='object')\n",
-      "Index(['outlook', 'temp', 'humidity', 'wind', 'play'], dtype='object')\n"
+      "Index(['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)',\n",
+      "       'petal width (cm)', 'target'],\n",
+      "      dtype='object')\n",
+      "Index(['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)',\n",
+      "       'petal width (cm)', 'target'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "model_prun = post_pruning(play_tennis, model,model, len(model.children)+1, 'play')"
+    "model_prun = post_pruning(iris, model,model, len(model.children)+1, 'target')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[outlook]\n",
-      "----Sunny\n",
-      "        No\n",
-      "----Overcast\n",
-      "        Yes\n",
-      "----Rain\n",
-      "        Yes\n"
+      "[petal length (cm)]\n",
+      "---->=2.45\n",
+      "    [petal width (cm)]\n",
+      "-------->=1.75\n",
+      "        [sepal width (cm)]\n",
+      "------------>=3.15\n",
+      "            [sepal length (cm)]\n",
+      "---------------->=6.05\n",
+      "                    2\n",
+      "----------------<6.05\n",
+      "                    1\n",
+      "------------<3.15\n",
+      "                2\n",
+      "--------<1.75\n",
+      "        [petal length (cm)]\n",
+      "------------>=4.95\n",
+      "            [petal width (cm)]\n",
+      "---------------->=1.55\n",
+      "                [sepal length (cm)]\n",
+      "-------------------->=6.95\n",
+      "                        2\n",
+      "--------------------<6.95\n",
+      "                        1\n",
+      "----------------<1.55\n",
+      "                    2\n",
+      "------------<4.95\n",
+      "            [petal width (cm)]\n",
+      "---------------->=1.65\n",
+      "                    2\n",
+      "----------------<1.65\n",
+      "                    1\n",
+      "----<2.45\n",
+      "        0\n"
      ]
     }
    ],
    "source": [
-    "print_tree(model_prun,0)"
+    "print_tree(model,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[petal length (cm)]\n",
+      "----1.4\n",
+      "        0\n",
+      "----1.3\n",
+      "        0\n",
+      "----1.5\n",
+      "        0\n",
+      "----1.7\n",
+      "        0\n",
+      "----1.6\n",
+      "        0\n",
+      "----1.1\n",
+      "        0\n",
+      "----1.2\n",
+      "        0\n",
+      "----1.0\n",
+      "        0\n",
+      "----1.9\n",
+      "        0\n",
+      "----4.7\n",
+      "        1\n",
+      "----4.5\n",
+      "    [sepal length (cm)]\n",
+      "--------6.4\n",
+      "            1\n",
+      "--------5.7\n",
+      "            1\n",
+      "--------5.6\n",
+      "            1\n",
+      "--------6.2\n",
+      "            1\n",
+      "--------6.0\n",
+      "            1\n",
+      "--------5.4\n",
+      "            1\n",
+      "--------4.9\n",
+      "            2\n",
+      "----4.9\n",
+      "    [sepal width (cm)]\n",
+      "--------3.1\n",
+      "            1\n",
+      "--------2.5\n",
+      "            1\n",
+      "--------2.8\n",
+      "            2\n",
+      "--------2.7\n",
+      "            2\n",
+      "--------3.0\n",
+      "            2\n",
+      "----4.0\n",
+      "        1\n",
+      "----4.6\n",
+      "        1\n",
+      "----3.3\n",
+      "        1\n",
+      "----3.9\n",
+      "        1\n",
+      "----3.5\n",
+      "        1\n",
+      "----4.2\n",
+      "        1\n",
+      "----3.6\n",
+      "        1\n",
+      "----4.4\n",
+      "        1\n",
+      "----4.1\n",
+      "        1\n",
+      "----4.8\n",
+      "    [sepal length (cm)]\n",
+      "--------5.9\n",
+      "            1\n",
+      "--------6.8\n",
+      "            1\n",
+      "--------6.2\n",
+      "            2\n",
+      "--------6.0\n",
+      "            2\n",
+      "----4.3\n",
+      "        1\n",
+      "----5.0\n",
+      "    [sepal length (cm)]\n",
+      "--------6.7\n",
+      "            1\n",
+      "--------5.7\n",
+      "            2\n",
+      "--------6.0\n",
+      "            2\n",
+      "--------6.3\n",
+      "            2\n",
+      "----3.8\n",
+      "        1\n",
+      "----3.7\n",
+      "        1\n",
+      "----5.1\n",
+      "    [sepal length (cm)]\n",
+      "--------6.0\n",
+      "            1\n",
+      "--------5.8\n",
+      "            2\n",
+      "--------6.5\n",
+      "            2\n",
+      "--------6.3\n",
+      "            2\n",
+      "--------6.9\n",
+      "            2\n",
+      "--------5.9\n",
+      "            2\n",
+      "----3.0\n",
+      "        1\n",
+      "----6.0\n",
+      "        2\n",
+      "----5.9\n",
+      "        2\n",
+      "----5.6\n",
+      "        2\n",
+      "----5.8\n",
+      "        2\n",
+      "----6.6\n",
+      "        2\n",
+      "----6.3\n",
+      "        2\n",
+      "----6.1\n",
+      "        2\n",
+      "----5.3\n",
+      "        2\n",
+      "----5.5\n",
+      "        2\n",
+      "----6.7\n",
+      "        2\n",
+      "----6.9\n",
+      "        2\n",
+      "----5.7\n",
+      "        2\n",
+      "----6.4\n",
+      "        2\n",
+      "----5.4\n",
+      "        2\n",
+      "----5.2\n",
+      "        2\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = id3(iris, 'target', True)\n",
+    "print_tree(model, 0)"
    ]
   },
   {
@@ -1243,6 +1440,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
