--- a/Tubes1B_13517149.ipynb
+++ b/Tubes1B_13517149.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "0.9402859586706309"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "0.2467498197744391"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "'outlook'"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 320,
    "metadata": {
     "scrolled": false
    },
@@ -394,10 +394,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x7f8dbe793400>"
+       "<__main__.Node at 0x7f8dbe7d3a20>"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "<function __main__.print_tree(node, depth)>"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 329,
    "metadata": {
     "scrolled": true
    },
@@ -587,7 +587,7 @@
        "2  Overcast  Hot     None    Weak"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 330,
    "metadata": {
     "scrolled": true
    },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "2  Yes"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "(0.9182958340544894, 2.45)"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "('petal width (cm)', 0.8)"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,16 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x7f8dbe75b860>"
+       "<__main__.Node at 0x7f8dbe785c18>"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 339,
    "metadata": {
     "scrolled": true
    },
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "2  Overcast  Mild     High  Strong  Yes"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1235,15 +1235,7 @@
       "---->=2.45\n",
       "    [petal width (cm)]\n",
       "-------->=1.75\n",
-      "        [sepal width (cm)]\n",
-      "------------>=3.15\n",
-      "            [sepal length (cm)]\n",
-      "---------------->=6.05\n",
-      "                    2\n",
-      "----------------<6.05\n",
-      "                    1\n",
-      "------------<3.15\n",
-      "                2\n",
+      "            2\n",
       "--------<1.75\n",
       "        [petal length (cm)]\n",
       "------------>=4.95\n",
@@ -1273,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
